tests/diagnostics_golden/diag_pr222_transitive_mutating_function.txt
Diagnostics Golden: Transitive Mutating Function
Source: tests/negative/neg_pr222_transitive_mutating_function.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_pr222_transitive_mutating_function.safe:11:18: error: result-returning functions cannot mutate package state or access shared/channel state
  |
  | 11 |    write_counter ();
  |    |                  ^~
  |
  note: SPARK functions cannot combine return values with global mutation or volatile shared access
  note: move the shared/channel access into a procedure and pass local snapshots to pure functions
------------------------------------------------------------------------
